--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,4 +6,4 @@ repos:
     - id: terraform_validate
     - id: terraform_tflint
     - id: terraform_docs
-      args: ['--sort-by-required']
+      args: ['--args=--sort-by=required']
