--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,11 @@
+## to manually run use `pre-commit run -a `
+
 repos:
 - repo: git://github.com/antonbabenko/pre-commit-terraform
   rev: v1.50.0
   hooks:
     - id: terraform_fmt
-    - id: terraform_validate
     - id: terraform_tflint
-    - id: terraform_docs
-      args: ['--args=--sort-by=required']
+      args: ['--args=--module']
+    - id: terraform_docs_replace
+      args: ['--sort-by required']
